--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  // background-color: #18191c;
+  font-family: "Roboto";
+}
+
+app-root {
+  display: flex;
+}
+
+app-main-control {
+  background-color: #18191c;
+  width: 100%;
+}
